fix: overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .contenedor {
     width: 100%;
+    overflow: hidden;
   }
   
